--- a/1.tags_form.html
+++ b/1.tags_form.html
@@ -7,13 +7,17 @@
 </head>
 <body>
     
+    <form action="">
 
-    
+        Nome: <input type="text" name="name"> <br><br>
 
+        Idade: <input type="number" name="age"> <br><br>
 
+        Senha: <input type="password" name="password"> <br><br>
 
+        <button>Enviar</button>
 
-
+    </form>
 
 
 </body>
